# kafkaesk_log_generator

./: README.md  pyproject.toml
kafkaesk_log_generator/: app.py  generate.py
tests/: test_kafakesk_log_generator.py
