[tool.poetry]
name = "kafkaesk_log_generator"
version = "0.1.0"
description = ""
authors = ["Tyson DeNio <tyson@onna.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kafkaesk = { git = "https://github.com/onna/kafkaesk.git", branch= "master" }
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[tool.poetry.scripts]
generate = "kafkaesk_log_generator.generate:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
